<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="5dp"
    >
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modif"
        android:textColor="#D473D4"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>
    
       <EditText
         android:id="@+id/edit_nom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:inputType="text"
         android:hint="@string/Nom"
        />
    
    <EditText
         android:id="@+id/edit_prenom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:inputType="text"
         android:hint="@string/Prenom"
         />
    
    <EditText
         android:id="@+id/edit_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:inputType="text"
         android:hint="@string/Email"
        />
    
    <EditText
         android:id="@+id/edit_prevente"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:inputType="text"
         android:hint="@string/Prevente"
        />
 <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" 
    android:padding="5dp"
    >   
   <Button 
       	android:id="@+id/bouton_retour"
       	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
        android:text="@string/retour"></Button>
    
    <Button 
       	android:id="@+id/bouton_modif"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/modifier"
        android:layout_marginTop="10dp"
        android:gravity="center"></Button>
  </LinearLayout>  
    </LinearLayout>