<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"  
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/textViewFormulaire1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/titre_form"
        android:textColor="#D473D4"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    <EditText 
        	android:id="@+id/editTextFormulaire1"
        	android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="#D473D4"
            android:hint="@string/Nom"
            android:inputType="text"
           	android:layout_marginBottom="15dp"/>
            
       

    <EditText
        android:id="@+id/editTextFormulaire2"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:textColor="#D473D4"
        android:hint="@string/Prenom"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextFormulaire3"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textColor="#D473D4" />
        
     <EditText
            android:id="@+id/editTextFormulaire4"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="#D473D4"
            android:hint="@string/Prevente"
            android:inputType="text"
           	android:layout_marginBottom="15dp"/>
            

     <Button
         android:id="@+id/buttonFormulaire1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/form_button" />
    
</LinearLayout>

    

